--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <!-- 设置父工程 -->
+    <!-- 指定父模块 -->
     <parent>
         <artifactId>template</artifactId>
         <groupId>com.zhen</groupId>
@@ -15,6 +15,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>admin</name>
     <description>admin</description>
+    <packaging>jar</packaging>
 
     <properties>
         <java.version>11</java.version>
@@ -48,6 +49,18 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <!-- 指定该Main Class为全局的唯一入口 -->
+                    <mainClass>com.zhen.admin.AdminApplication</mainClass>
+                    <layout>ZIP</layout>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal><!--可以把依赖的包都打包到生成的Jar包中-->
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
