--- a/common/pom.xml
+++ b/common/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <!-- 设置父工程 -->
+    <!-- 指定父模块 -->
     <parent>
         <artifactId>template</artifactId>
         <groupId>com.zhen</groupId>
@@ -13,6 +13,7 @@
     <groupId>com.zhen</groupId>
     <artifactId>common</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <name>common</name>
     <description>common 定义公共元素</description>
@@ -25,13 +26,5 @@
 
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
